Fixed component url patterns to allow '-' character Modified component template, now the "add supported by" link is hidden by an icon Modified the registration form. Now the country, region and city fields are no longer filled when the page loads. There is a button to do that. Added functions to get supportedby api urls

--- a/static/css/gen.css
+++ b/static/css/gen.css
@@ -152,8 +152,12 @@ a:visited { color: #00FF22; }
 	color: red;
 }
 
-.modify_icon {
+.modify_icon_medium {
 	width: 32px;
 	height: 32px;
 }
 
+.modify_icon_small {
+	width: 16px;
+	height: 16px;
+}
